# punxa_6502

./: README.md  pyproject.toml  setup.py
punxa/: instruction_decode.py
punxa/single_cycle/: singlecycle_processor.py
punxa_6502/: __init__.py  bus.py  executable.py  instruction_decode.py  interactive_commands.py  memory.py  uart.py
punxa_6502.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
punxa_6502/algorithmic/: singlecycle_processor.py
punxa_6502/single_cycle/: singlecycle_processor.py
punxa_6502/structural/: multicycle_processor.py
sdcc/: ChangeLog  Makefile  Makefile.common  config.status  main.mk  ports.all  ports.build  sdccconf.h
sdcc/debugger/mcs51/: Makefile  config.status
sdcc/device/include/: Makefile
sdcc/device/lib/: Makefile  Makefile.dep
sdcc/sdas/as6500/: Makefile
sdcc/sdas/as8xcxxx/: Makefile
sdcc/sdas/asf8/: Makefile
sdcc/sdas/linksrc/: Makefile
sdcc/sim/ucsim/: config.status
sdcc/src/: Makefile  Makefile.dep  Makefile.depcxx  SDCClex.c  SDCCy.c  SDCCy.h  version.h
sdcc/src/f8/: peeph.rul
sdcc/src/mos6502/: Makefile.dep  Makefile.depcc  Makefile.depcxx  peeph.rul
sdcc/support/cpp/: Makefile  config.status
sdcc/support/packihx/: Makefile.dep  config.status
sdcc/support/regression/: Makefile
sdcc/support/sdbinutils/: Makefile  config.status
sdcc/support/valdiag/: Makefile
test/hello/: .gitignore  Makefile  hello.c  hello.ihx  hello.map  tb_Hello.py
test/unit/: .gitignore  Makefile  README.md  TMPtest.c  tb_Test.py  test.asm  test.c  test.h  test.ihx  test.map  test_macros.h
(+2374 files in other folders)
